# PRIMAL2csci567

./: .gitignore  Env_Builder.py  Map_Generator.py  Primal2Env.py  Primal2Observer.py  README.md  Ray_ACNet.py  Runner.py  TestingEnv.py  Worker.py  driver.py  driverRunner.sh  parameters.py  requirements.txt
CBS_for_PRIMAL/: CMakeLists.txt  compile.sh  python_test.py
CBS_for_PRIMAL/inc/: Instance.h
CBS_for_PRIMAL/src/: CBS.cpp  CBSHeuristic.cpp  CorridorReasoning.cpp  Instance.cpp  SIPP.cpp  SpaceTimeAStar.cpp  new_driver.cpp
Plots/: plotter.py
Plots/Training_Plots/BasicRewards/: run-.-tag-Losses_Entropy Loss-2.csv  run-.-tag-Losses_Grad Norm.csv  run-.-tag-Losses_Imitation loss.csv  run-.-tag-Losses_Policy Loss.csv  run-.-tag-Losses_Valid Loss.csv  run-.-tag-Losses_Value Loss.csv  run-.-tag-Losses_Var Norm.csv  run-.-tag-Perf_ RL IL ratio Ep..csv  run-.-tag-Perf_Learning Rate.csv  run-.-tag-Perf_Length.csv  run-.-tag-Perf_Num IL Ep..csv  run-.-tag-Perf_Num RL Ep..csv  run-.-tag-Perf_Stop Rate.csv  run-.-tag-Perf_Targets Done-2.csv  run-.-tag-Perf_Valid Rate-2.csv
Plots/Training_Plots/ProgressRewards/: run-.-tag-Losses_Entropy Loss-2.csv  run-.-tag-Losses_Grad Norm.csv  run-.-tag-Losses_Imitation loss.csv  run-.-tag-Losses_Policy Loss.csv  run-.-tag-Losses_Valid Loss.csv  run-.-tag-Losses_Value Loss.csv  run-.-tag-Losses_Var Norm.csv  run-.-tag-Perf_ RL IL ratio Ep..csv  run-.-tag-Perf_Learning Rate.csv  run-.-tag-Perf_Length.csv  (+6 more)
Plots/data/: Base_Reward.csv  dist_random-32-32-20_continuousProgressReward.csv  random-32-32-20_continuousCBS.csv
